--- a/index.html
+++ b/index.html
@@ -27,8 +27,23 @@
             </ul>
         </nav>
     </header>
-    <section></section>
-    <section></section>
+    <section class="hero-section">
+        <div class="slogan">
+            <h2>First, <span>think</span>. Second, <span>believe</span>. Third,<span>dream</span>.</h2>
+            <h2>And finally, <span class="yellow-text">dare!</span></h2>   
+        </div>
+    </section>
+    <section>
+        <article class="about-section">
+            <div class="container">
+                <h2> Zjedz ciastko!</h2> 
+                <img src="assets/img/unicorncup.jpg" alt="cupcake">
+                <p>Danish biscuit cupcake biscuit dessert muffin. Donut fruitcake wafer sesame snaps wafer ice cream jujubes oat cake. Carrot cake tiramisu caramels cake gingerbread bear claw. Jelly-o pastry caramels muffin cake. Donut croissant icing bonbon soufflé tiramisu muffin macaroon sweet roll. Oat cake cake dessert lemon drops.</p>
+                <p>Cake marzipan pastry icing pastry. Macaroon donut cake soufflé icing jelly-o cake. Ice cream oat cake halvah soufflé gummies cookie chocolate bar croissant cupcake. Dessert danish marshmallow. Lollipop gingerbread macaroon soufflé. Sweet tootsie roll tart.</p>
+                <p>Chocolate cake cheesecake sweet tart. Topping jelly-o marshmallow caramels soufflé croissant cake donut candy. Jujubes pudding macaroon. Dessert jujubes dessert candy marshmallow topping marzipan.</p>
+            </div>
+        </article>
+    </section>
     <section></section>
     <section></section>
     <section></section>
