Added photo gallery and vid

--- a/index.html
+++ b/index.html
@@ -44,8 +44,22 @@
             </div>
         </article>
     </section>
-    <section></section>
-    <section></section>
+    <section class="gallery-section">
+        <div class="container">
+            <h2 class="gallery-text">Galeria naszych słodyczy</h2>
+            <figure class="gallery-image">
+                <img src="https://images.unsplash.com/photo-1486427944299-d1955d23e34d?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=07df4ad552d3627b7cbc7836321d9a03&auto=format&fit=crop&w=1050&q=80" alt="ciastko1">
+                <img src="https://images.unsplash.com/photo-1451365638257-dd6e3d7ba394?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2d0cfd1c038d2a8c1a15d7256e491c7c&auto=format&fit=crop&w=1050&q=80" alt="ciastko2">
+                <img src="https://images.unsplash.com/photo-1489069313310-63735a4f3010?ixlib=rb-0.3.5&s=7e47067e540eb6d9b62f9063394c8712&auto=format&fit=crop&w=966&q=80" alt="makaroniki">
+                <img src="https://images.unsplash.com/photo-1514517220017-8ce97a34a7b6?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=7c376ffa487bcd258df29dc881b10703&auto=format&fit=crop&w=1000&q=60" alt="donuty">
+            </figure>
+        </div>
+    </section>
+    <section class="movie-section">
+        <div class="single-movie">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/svD3gAe5sH8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+    </section>
     <section></section>
     <footer></footer>
 </body>
