--- a/index.html
+++ b/index.html
@@ -60,7 +60,26 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/svD3gAe5sH8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
     </section>
-    <section></section>
-    <footer></footer>
+    <section class="icon-section container">
+        <div class="icon fb-fans">
+            <a href= "https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <p></p>
+            <p></p>
+        </div>
+        <div class="icon insta-fans">
+            <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+            <p></p>
+            <p></p>
+        </div>
+        <div class="icon cake">
+            <a href="#" target="_blank"><i class="fab fa-birthdaycake"></i></a>
+            <p></p>
+            <p></p>
+        </div>
+    </section>
+    <footer>
+        <p>&#169; Strona stworzona przez <a          href="http://bedeprogramistka.pl"
+        target="_blank">BedeProgramistka.pl</a></p>
+    </footer>
 </body>
 </html>
