--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <li><a href="#">Kontakt</a></li>
             </ul>
         </nav>
+        <div class="clear"></div>
     </header>
     <section class="hero-section">
         <div class="slogan">
