icon section edited

--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
     <section class="icon-section container">
         <div class="icon fb-fans">
             <a href= "https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            <p></p>
+            <p>Facebook</p>
             <p></p>
         </div>
         <div class="icon insta-fans">
             <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-            <p></p>
+            <p>Instagram</p>
             <p></p>
         </div>
         <div class="icon cake">
-            <a href="#" target="_blank"><i class="fab fa-birthdaycake"></i></a>
-            <p></p>
+            <a href="#" target="_blank"><i class="fas fa-birthday-cake"></i></a>
+            <p>Ciastko</p>
             <p></p>
         </div>
     </section>
