form section added and styled

--- a/index.html
+++ b/index.html
@@ -81,6 +81,22 @@
             <p></p>
         </div>
     </section>
+    
+    <section class="contact-section">
+        <div class="container">
+            <form action="mailto:weronikajuszczyk@gmail.com"        method="POST"> 
+            <label for="name">Imię</label> 
+            <input type="text" name="name" id="name" required> 
+            <label for="email">E-mail</label> 
+            <input type="email" name="email" id="email" required> 
+            <textarea name="message" id="message" rows="3" required/></textarea>
+            <input type="submit" name="submit" value="Wyślij">
+            <input type="reset" name="submit" value="Usuń dane">
+            </form>
+        </div>
+    </section>
+ 
+
     <footer>
         <p>&#169; Strona stworzona przez <a          href="http://bedeprogramistka.pl"
         target="_blank">BedeProgramistka.pl</a></p>
